feat(impl): simple eval heuristic

--- a/notebooks/chess_test.ipynb
+++ b/notebooks/chess_test.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Imports"
    ]
@@ -12,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "import chess\n",
@@ -26,7 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "path_to_stockfish = \"/Applications/stockfish-10-mac/Mac/stockfish-10-popcnt\""
@@ -34,9 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Define start values"
    ]
@@ -44,7 +48,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "positions_analyzed_alpha_beta = 0\n",
@@ -55,9 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Increment helper functions for Alpha-Beta and Minimax"
    ]
@@ -65,7 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def increment_alpha_beta():\n",
@@ -79,9 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Helper function to reset Alpha-Beta and Minimax analysis"
    ]
@@ -89,7 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def reset():\n",
@@ -101,9 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Get users next move"
    ]
@@ -111,7 +121,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def get_move(prompt):\n",
@@ -127,9 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Wrapper for the humans turn"
    ]
@@ -137,7 +149,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def human_player(board):\n",
@@ -152,9 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Get move of random player"
    ]
@@ -162,7 +176,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def random_player(board):\n",
@@ -172,9 +190,255 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Piece Values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
+   "source": [
+    "piece_values = {\n",
+    "    chess.BISHOP: 330,\n",
+    "    chess.KING: 20_000,\n",
+    "    chess.KNIGHT: 320,\n",
+    "    chess.PAWN: 100,\n",
+    "    chess.QUEEN: 900,\n",
+    "    chess.ROOK: 500,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Helper function returning the piece value for a given piece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_piece_value(piece: chess.Piece) -> int:\n",
+    "    if not piece:\n",
+    "        return 0\n",
+    "    factor = -1 if piece.color == chess.BLACK else 1\n",
+    "    return factor * piece_values.get(piece.piece_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Piece-Squared-Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "piece_squared_tables = {\n",
+    "    chess.BISHOP: (\n",
+    "        (-20, -10, -10, -10, -10, -10, -10, -20),\n",
+    "        (-10,   0,   0,   0,   0,   0,   0, -10),\n",
+    "        (-10,   0,   5,  10,  10,   5,   0, -10),\n",
+    "        (-10,   5,   5,  10,  10,   5,   5, -10),\n",
+    "        (-10,   0,  10,  10,  10,  10,   0, -10),\n",
+    "        (-10,  10,  10,  10,  10,  10,  10, -10),\n",
+    "        (-10,   5,   0,   0,   0,   0,   5, -10),\n",
+    "        (-20, -10, -10, -10, -10, -10, -10, -20),\n",
+    "    ),\n",
+    "    chess.KING: (\n",
+    "        (-30, -40, -40, -50, -50, -40, -40, -30),\n",
+    "        (-30, -40, -40, -50, -50, -40, -40, -30),\n",
+    "        (-30, -40, -40, -50, -50, -40, -40, -30),\n",
+    "        (-30, -40, -40, -50, -50, -40, -40, -30),\n",
+    "        (-20, -30, -30, -40, -40, -30, -30, -20),\n",
+    "        (-10, -20, -20, -20, -20, -20, -20, -10),\n",
+    "        ( 20,  20,   0,   0,   0,   0,  20,  20),\n",
+    "        ( 20,  30,  10,   0,   0,  10,  30,  20),\n",
+    "    ),\n",
+    "    chess.KNIGHT: (\n",
+    "        (-50, -40, -30, -30, -30, -30, -40, -50),\n",
+    "        (-40, -20,   0,   0,   0,   0, -20, -40),\n",
+    "        (-30,   0,  10,  15,  15,  10,   0, -30),\n",
+    "        (-30,   5,  15,  20,  20,  15,   5, -30),\n",
+    "        (-30,   0,  15,  20,  20,  15,   0, -30),\n",
+    "        (-30,   5,  10,  15,  15,  10,   5, -30),\n",
+    "        (-40, -20,   0,   5,   5,   0, -20, -40),\n",
+    "        (-50, -40, -30, -30, -30, -30, -40, -50),\n",
+    "    ),\n",
+    "    chess.PAWN: (\n",
+    "        (  0,   0,   0,   0,   0,   0,   0,   0),\n",
+    "        ( 50,  50,  50,  50,  50,  50,  50,  50),\n",
+    "        ( 10,  10,  20,  30,  30,  20,  10,  10),\n",
+    "        (  5,   5,  10,  25,  25,  10,   5,   5),\n",
+    "        (  0,   0,   0,  20,  20,   0,   0,   0),\n",
+    "        (  5,  -5, -10,   0,   0, -10,  -5,   5),\n",
+    "        (  5,  10,  10, -20, -20,  10,  10,   5),\n",
+    "        (  0,   0,   0,   0,   0,   0,   0,   0),\n",
+    "    ),\n",
+    "    chess.QUEEN: (\n",
+    "        (-20, -10, -10,  -5,  -5, -10, -10, -20),\n",
+    "        (-10,   0,   0,   0,   0,   0,   0, -10),\n",
+    "        (-10,   0,   5,   5,   5,   5,   0, -10),\n",
+    "        ( -5,   0,   5,   5,   5,   5,   0,  -5),\n",
+    "        (  0,   0,   5,   5,   5,   5,   0,  -5),\n",
+    "        (-10,   5,   5,   5,   5,   5,   0, -10),\n",
+    "        (-10,   0,   5,   0,   0,   0,   0, -10),\n",
+    "        (-20, -10, -10,  -5,  -5, -10, -10, -20),\n",
+    "    ),\n",
+    "    chess.ROOK: (\n",
+    "        (  0,   0,   0,   0,   0,   0,   0,   0),\n",
+    "        (  5,  10,  10,  10,  10,  10,  10,   5),\n",
+    "        ( -5,   0,   0,   0,   0,   0,   0,  -5),\n",
+    "        ( -5,   0,   0,   0,   0,   0,   0,  -5),\n",
+    "        ( -5,   0,   0,   0,   0,   0,   0,  -5),\n",
+    "        ( -5,   0,   0,   0,   0,   0,   0,  -5),\n",
+    "        ( -5,   0,   0,   0,   0,   0,   0,  -5),\n",
+    "        (  0,   0,   0,   5,   5,   0,   0,   0),\n",
+    "    ),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "We use a different piece-squared table for the king in the end game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "kings_end_game_squared_table = (\n",
+    "    (-50, -40, -30, -20, -20, -30, -40, -50),\n",
+    "    (-30, -20, -10,   0,   0, -10, -20, -30),\n",
+    "    (-30, -10,  20,  30,  30,  20, -10, -30),\n",
+    "    (-30, -10,  30,  40,  40,  30, -10, -30),\n",
+    "    (-30, -10,  30,  40,  40,  30, -10, -30),\n",
+    "    (-30, -10,  20,  30,  30,  20, -10, -30),\n",
+    "    (-30, -30,   0,   0,   0,   0, -30, -30),\n",
+    "    (-50, -30, -30, -30, -30, -30, -30, -50),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Helper function returning the piece squared tables value for a given piece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_piece_squared_tables_value(piece: chess.Piece, end_game: bool=False) -> int:\n",
+    "    if not piece:\n",
+    "        return 0\n",
+    "    factor = -1 if piece.color == chess.BLACK else 1\n",
+    "    row = piece.piece_type // 8\n",
+    "    column = piece.piece_type % 8\n",
+    "    \n",
+    "    if end_game and piece.piece_type == chess.KING:\n",
+    "        return kings_end_game_squared_table[row][column]\n",
+    "    \n",
+    "    piece_squared_table = piece_squared_tables.get(piece.piece_type)\n",
+    "    return factor * piece_squared_table[row][column]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple Evaluation Heuristic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def simple_eval_heuristic(board: chess.Board, end_game: bool=False) -> int:\n",
+    "    piece_value = 0\n",
+    "    for square in range(64):\n",
+    "        piece = board.piece_at(square)\n",
+    "        piece_value += get_piece_value(piece)\n",
+    "        piece_value += get_piece_squared_tables_value(piece, end_game)\n",
+    "    return piece_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "AI 1 player"
    ]
@@ -182,7 +446,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def ai1(board):\n",
@@ -196,9 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Stockfish"
    ]
@@ -206,7 +472,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def stockfish(board):\n",
@@ -218,9 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Alpha-Beta for AI"
    ]
@@ -228,7 +496,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def ai_alpha_beta(board, color, depth):\n",
@@ -255,9 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Minimax for AI (never used)"
    ]
@@ -265,7 +535,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def ai_minimax(board, color, depth):\n",
@@ -287,9 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Minimax"
    ]
@@ -297,7 +569,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def minimax(board, color, depth):\n",
@@ -338,9 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Alpha-Beta"
    ]
@@ -348,7 +622,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def alpha_beta(board, alpha, beta, color, depth):\n",
@@ -396,9 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Static Analysis"
    ]
@@ -406,7 +682,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def static_analysis(board):\n",
@@ -454,9 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Return a string representation of the player"
    ]
@@ -464,7 +742,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def who(player):\n",
@@ -473,9 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Helper function to display the chess board"
    ]
@@ -483,7 +763,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def display_board(board, use_svg):\n",
@@ -495,9 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Helper function to sort the moves"
    ]
@@ -505,7 +787,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def sort_moves(moves,board):\n",
@@ -520,9 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Function coordinating the game. It's the entry point for the game."
    ]
@@ -530,7 +814,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def play_game(player1, player2, visual=\"svg\", pause=0.3):\n",
@@ -581,9 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Start a game"
    ]
@@ -591,7 +877,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "play_game(ai_alpha_beta, ai_alpha_beta)"
@@ -600,7 +890,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -621,7 +915,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1-final"
+   "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
