fix(implementation): only assign best move if already one round completed

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -400,7 +400,7 @@
     "\n",
     "    while True:\n",
     "        d += 1\n",
-    "        if d > 0:\n",
+    "        if d > 1:\n",
     "            global_best_move = best_move\n",
     "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move}\")\n",
     "        current_depth = depth + d\n",
@@ -467,7 +467,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
@@ -510,7 +511,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
