feat(implementation): add a few helper functions and the human player

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -484,7 +484,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Test den Code"
+    "`reset` ist eine Hilfsfunktion, die die globalen Werte für alpha und beta zurücksetzt."
    ],
    "metadata": {
     "collapsed": false,
@@ -498,8 +498,108 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "board = chess.Board()\n",
-    "board"
+    "def reset():\n",
+    "    global positions_analyzed_alpha_beta\n",
+    "    global positions_analyzed_minimax\n",
+    "    positions_analyzed_alpha_beta = 0\n",
+    "    positions_analyzed_minimax = 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "`who` ist eine Hilfsfunktion, um den Namen des Spielers (Weiß oder Schwarz) zurückzuliefern. Dies wird für die Anzeige benötigt."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def who(player):\n",
+    "    return \"White\" if player == chess.WHITE else \"Black\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "`get_move` ist eine Hilfsfunktion, die die Nutzereingabe in einen Zug umwandelt, wenn dies möglich ist."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def get_move(prompt):\n",
+    "    uci = input(prompt)\n",
+    "    if uci and uci[0] == \"q\":\n",
+    "        raise KeyboardInterrupt()\n",
+    "    try:\n",
+    "        chess.Move.from_uci(uci)\n",
+    "    except:\n",
+    "        uci = None\n",
+    "    return uci"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Die Funktion `human_player` repräsentiert den menschlichen Spieler und koordiniert die Züge des Spielers."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def human_player(board):\n",
+    "    display(board)\n",
+    "    uci = get_move(f\"{who(board.turn)}'s move [q to quit]>\")\n",
+    "    legal_uci_moves = [move.uci() for move in board.legal_moves]\n",
+    "    while uci not in legal_uci_moves:\n",
+    "        print(f\"Legal moves: {(', '.join(sorted(legal_uci_moves)))}\")\n",
+    "        uci = get_move(f\"{who(board.turn)}'s move [q to quit]>\")\n",
+    "    return uci"
    ],
    "metadata": {
     "collapsed": false,
@@ -513,24 +613,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "iterative_deepening(board, 0)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
