refactor(implementation): orient maximize and minimize on paper

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -369,7 +369,7 @@
     "            global_best_move = best_move\n",
     "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move}\")\n",
     "        current_depth = depth + d\n",
-    "        maximizer(board, current_depth, -sys.maxsize, sys.maxsize)\n",
+    "        minimize(board, current_depth, sys.maxsize, -sys.maxsize)\n",
     "\n",
     "        if is_timeout:\n",
     "            return global_best_move"
@@ -385,7 +385,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Implementierung der `maximizer` Funktion."
+    "Implementierung der `maximize` Funktion."
    ],
    "metadata": {
     "collapsed": false,
@@ -399,7 +399,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def maximizer(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
+    "def maximize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
     "    global best_move\n",
     "    global is_timeout\n",
     "    global start_time\n",
@@ -408,26 +408,27 @@
     "        is_timeout = True\n",
     "        return alpha\n",
     "\n",
-    "    if depth == 0:\n",
+    "    if depth < 1:\n",
     "        return simple_eval_heuristic(board)\n",
     "    \n",
+    "    score = alpha\n",
     "    moves = board.legal_moves\n",
     "\n",
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        rating: int = minimizer(newboard, depth - 1, alpha, beta)\n",
+    "        move_score = minimize(newboard, depth - 1, alpha, beta)\n",
     "        newboard.pop()\n",
     "\n",
-    "        if  rating > alpha:\n",
-    "            alpha = rating\n",
+    "        if move_score > score:\n",
+    "            score = move_score\n",
+    "            \n",
+    "            if score > alpha:\n",
+    "                alpha = score\n",
     "\n",
-    "            if depth == current_depth:\n",
-    "                best_move = move\n",
-    "\n",
-    "        if alpha >= beta:\n",
-    "            return alpha\n",
-    "    return alpha"
+    "        if score >= beta:\n",
+    "            break\n",
+    "    return score"
    ],
    "metadata": {
     "collapsed": false,
@@ -440,7 +441,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Implementierung der `minimizer` Funktion."
+    "Implementierung der `minimize` Funktion."
    ],
    "metadata": {
     "collapsed": false,
@@ -454,24 +455,31 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def minimizer(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
-    "    if depth == 0:\n",
+    "def minimize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
+    "    if depth < 1:\n",
     "        return simple_eval_heuristic(board)\n",
-    "        \n",
+    "    \n",
+    "    score = beta\n",
     "    moves = board.legal_moves\n",
     "\n",
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        rating: int = maximizer(newboard, depth - 1, alpha, beta)\n",
+    "        move_score = maximize(newboard, depth - 1, alpha, beta)\n",
     "        newboard.pop()\n",
     "\n",
-    "        if rating <= beta:\n",
-    "            beta = rating\n",
+    "        if move_score < score:\n",
+    "            score = move_score\n",
+    "            \n",
+    "            if score < beta:\n",
+    "                beta = score\n",
+    "            \n",
+    "            if depth == current_depth:\n",
+    "                best_move = move\n",
     "\n",
-    "        if alpha >= beta:\n",
-    "            return beta\n",
-    "    return beta"
+    "        if score <= alpha:\n",
+    "            break\n",
+    "    return score"
    ],
    "metadata": {
     "collapsed": false,
