--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "An dieser Stelle werden alle notwendigen Imports getätigt."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "is_executing": false
     }
@@ -31,46 +28,49 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Globale Konstanten"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Globale Konstanten"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "TIMEOUT_SECONDS: int = 6"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Globale Variablen"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Globale Variablen"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "best_move = None\n",
@@ -78,30 +78,28 @@
     "global_best_move = None\n",
     "is_timeout: bool = False\n",
     "start_time: float = 0.0"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Nachfolgend werden die Figurenwerte definiert."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Nachfolgend werden die Figurenwerte definiert."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "piece_values = {\n",
@@ -112,27 +110,24 @@
     "    chess.QUEEN: 900,\n",
     "    chess.ROOK: 500,\n",
     "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Die Funktion `get_piece_value` gibt den Figurenwert für eine übergebene Figur auf dem Schachbrett zurück."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_piece_value(piece: chess.Piece) -> int:\n",
@@ -140,30 +135,28 @@
     "        return 0\n",
     "    factor = -1 if piece.color == chess.BLACK else 1\n",
     "    return factor * piece_values.get(piece.piece_type)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Nachfolgend werden die Piece-Squared Tables definiert."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Nachfolgend werden die Piece-Squared Tables definiert."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "piece_squared_tables = {\n",
@@ -228,27 +221,24 @@
     "        (  0,   0,   0,   5,   5,   0,   0,   0),\n",
     "    ),\n",
     "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "In der Endphase wird für den König eine andere Tabelle verwendet. Diese ist nachfolgend definiert."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "kings_end_game_squared_table = (\n",
@@ -261,27 +251,24 @@
     "    (-30, -30,   0,   0,   0,   0, -30, -30),\n",
     "    (-50, -30, -30, -30, -30, -30, -30, -50),\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Die Funktion `get_piece_quared_tables_value` liefert den Wert der Piece-Squared Table für eine übergebene Figur auf dem Schachbrett."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_piece_squared_tables_value(piece: chess.Piece, end_game: bool=False) -> int:\n",
@@ -296,27 +283,24 @@
     "    \n",
     "    piece_squared_table = piece_squared_tables.get(piece.piece_type)\n",
     "    return factor * piece_squared_table[row][column]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Die Funktion `simple_eval_heuristic` setzt die einfache Bewertungsheuristik um."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def simple_eval_heuristic(board: chess.Board, end_game: bool=False) -> int:\n",
@@ -326,30 +310,28 @@
     "        piece_value += get_piece_value(piece)\n",
     "        piece_value += get_piece_squared_tables_value(piece, end_game)\n",
     "    return piece_value"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Implementierung des Iterative Deepening"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Implementierung des Iterative Deepening"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def iterative_deepening(board: chess.Board, depth: int):\n",
@@ -369,38 +351,35 @@
     "            global_best_move = best_move\n",
     "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move}\")\n",
     "        current_depth = depth + d\n",
-    "        minimize(board, current_depth, sys.maxsize, -sys.maxsize)\n",
+    "        minimize(board, current_depth, -sys.maxsize, sys.maxsize)\n",
     "\n",
     "        if is_timeout:\n",
     "            return global_best_move"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Implementierung der `maximize` Funktion."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Implementierung der `maximize` Funktion."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def maximize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
-    "    global best_move\n",
     "    global is_timeout\n",
     "    global start_time\n",
     "    \n",
@@ -429,33 +408,34 @@
     "        if score >= beta:\n",
     "            break\n",
     "    return score"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Implementierung der `minimize` Funktion."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Implementierung der `minimize` Funktion."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def minimize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
+    "    global best_move\n",
+    "    global global_best_move\n",
+    "    \n",
     "    if depth < 1:\n",
     "        return simple_eval_heuristic(board)\n",
     "    \n",
@@ -470,40 +450,37 @@
     "\n",
     "        if move_score < score:\n",
     "            score = move_score\n",
+    "            best_move = move\n",
     "            \n",
     "            if score < beta:\n",
     "                beta = score\n",
-    "            \n",
-    "            if depth == current_depth:\n",
-    "                best_move = move\n",
+    "                global_best_move = best_move\n",
     "\n",
     "        if score <= alpha:\n",
     "            break\n",
     "    return score"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "`reset` ist eine Hilfsfunktion, die die globalen Werte für alpha und beta zurücksetzt."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "`reset` ist eine Hilfsfunktion, die die globalen Werte für alpha und beta zurücksetzt."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def reset():\n",
@@ -511,58 +488,54 @@
     "    global positions_analyzed_minimax\n",
     "    positions_analyzed_alpha_beta = 0\n",
     "    positions_analyzed_minimax = 0"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "`who` ist eine Hilfsfunktion, um den Namen des Spielers (Weiß oder Schwarz) zurückzuliefern. Dies wird für die Anzeige benötigt."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "`who` ist eine Hilfsfunktion, um den Namen des Spielers (Weiß oder Schwarz) zurückzuliefern. Dies wird für die Anzeige benötigt."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def who(player):\n",
     "    return \"White\" if player == chess.WHITE else \"Black\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "`get_move` ist eine Hilfsfunktion, die die Nutzereingabe in einen Zug umwandelt, wenn dies möglich ist."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "`get_move` ist eine Hilfsfunktion, die die Nutzereingabe in einen Zug umwandelt, wenn dies möglich ist."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_move(prompt):\n",
@@ -574,30 +547,28 @@
     "    except:\n",
     "        uci = None\n",
     "    return uci"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Die Funktion `human_player` repräsentiert den menschlichen Spieler und koordiniert die Züge des Spielers."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Die Funktion `human_player` repräsentiert den menschlichen Spieler und koordiniert die Züge des Spielers."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def human_player(board):\n",
@@ -608,27 +579,123 @@
     "        print(f\"Legal moves: {(', '.join(sorted(legal_uci_moves)))}\")\n",
     "        uci = get_move(f\"{who(board.turn)}'s move [q to quit]>\")\n",
     "    return uci"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Die Funktion `ai_player` repräsentiert den Schachcomputer und koordiniert den Ablauf seines Entscheidungsprozesses."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "def ai_player(board):\n",
+    "    return iterative_deepening(board, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "`play_game` ist die Funktion, die den Spielablauf koordiniert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def play_game(pause=0.3):\n",
+    "    board = chess.Board()\n",
+    "    \n",
+    "    try:\n",
+    "        while not board.is_game_over(claim_draw=True):\n",
+    "            if board.turn == chess.WHITE:\n",
+    "                move = board.parse_uci(human_player(board))\n",
+    "            else:\n",
+    "                move = ai_player(board)\n",
+    "                \n",
+    "            name = who(board.turn)\n",
+    "            board.push(move)\n",
+    "            html = f\"{board}\"\n",
+    "            \n",
+    "            reset()\n",
+    "            clear_output(wait=True)\n",
+    "            display(HTML(html))\n",
+    "            time.sleep(pause)\n",
+    "    except KeyboardInterrupt:\n",
+    "        msg = \"Game interrupted\"\n",
+    "        return None, msg, board\n",
+    "    \n",
+    "    result = None\n",
+    "    if board.is_checkmate():\n",
+    "        msg = \"checkmate: \" + who(not board.turn) + \" wins!\"\n",
+    "        result = not board.turn\n",
+    "    elif board.is_stalemate():\n",
+    "        msg = \"draw: stalemate\"\n",
+    "    elif board.is_fivefold_repetition():\n",
+    "        msg = \"draw: fivefold repetition\"\n",
+    "    elif board.is_insufficient_material():\n",
+    "        msg = \"draw: insufficient material\"\n",
+    "    elif board.can_claim_draw():\n",
+    "        msg = \"draw: claim\"\n",
+    "    \n",
+    "    print(msg)\n",
+    "    return result, msg, board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "play_game()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -640,25 +707,25 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
