feat: add opening data base

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "import chess\n",
     "import chess.engine\n",
+    "import chess.polyglot\n",
     "import random\n",
     "import chess.svg\n",
     "import time\n",
@@ -604,8 +605,48 @@
    },
    "outputs": [],
    "source": [
-    "def ai_player(board):\n",
-    "    return iterative_deepening(board, 0)"
+    "def ai_player(board: chess.Board):\n",
+    "    move = get_opening_data_base_moves(board)\n",
+    "    \n",
+    "    if move:\n",
+    "        return move\n",
+    "    else:\n",
+    "        return iterative_deepening(board, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Die Funktion `get_opening_data_base_moves` gibt einen Zug aus der Opening Data Base zurück, falls ein Zug für die aktuelle Stellung gefunden werden kann."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_opening_data_base_moves(board: chess.Board):\n",
+    "    move = None\n",
+    "    opening_moves = []\n",
+    "    with chess.polyglot.open_reader(\"Performance.bin\") as reader:\n",
+    "        for entry in reader.find_all(board):\n",
+    "            opening_moves.append(entry)\n",
+    "    if opening_moves:\n",
+    "        random_entry = random.choice(opening_moves)\n",
+    "        move = random_entry.move\n",
+    "        print(move)\n",
+    "    return move"
    ]
   },
   {
