fix(implementation): set global_best_move only if current_depth == depth

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -455,7 +455,8 @@
     "            \n",
     "            if score < beta:\n",
     "                beta = score\n",
-    "                global_best_move = best_move\n",
+    "                if current_depth == depth:\n",
+    "                    global_best_move = best_move\n",
     "\n",
     "        if score <= alpha:\n",
     "            break\n",
@@ -760,10 +761,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
