feat(tools): describe the used tools

--- a/paper/content/acronyms.tex
+++ b/paper/content/acronyms.tex
@@ -5,6 +5,7 @@
 	\acro{K}{König}
 	\acro{L}{Läufer}
 	\acro{D}{Dame}
+	\acro{PyPI}{Python Package Index}
 	\acro{S}{Springer}
 	\acro{T}{Turm}
 \end{acronym}
