fix(implementation): use reversed piece-squared tables if it's black players turn

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -259,6 +259,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Generierung der inversen Piece-Squared Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reversed_piece_squared_tables = {key: tuple([\n",
+    "                                            piece[::-1]\n",
+    "                                            for piece in value][::-1]) \n",
+    "                                 for key, value in piece_squared_tables.items()}\n",
+    "reversed_kings_end_game_squared_table = tuple([\n",
+    "                                        piece[::-1]\n",
+    "                                        for piece in kings_end_game_squared_table][::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Die Funktion `get_piece_quared_tables_value` liefert den Wert der Piece-Squared Table für eine übergebene Figur auf dem Schachbrett."
    ]
   },
@@ -273,7 +295,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_piece_squared_tables_value(piece: chess.Piece, end_game: bool=False) -> int:\n",
+    "def get_piece_squared_tables_value(piece: chess.Piece, color: int, end_game: bool=False) -> int:\n",
     "    if not piece:\n",
     "        return 0\n",
     "    factor = -1 if piece.color == chess.BLACK else 1\n",
@@ -281,9 +303,16 @@
     "    column = piece.piece_type % 8\n",
     "    \n",
     "    if end_game and piece.piece_type == chess.KING:\n",
-    "        return kings_end_game_squared_table[row][column]\n",
+    "        if color == chess.WHITE:\n",
+    "            return kings_end_game_squared_table[row][column]\n",
+    "        else:\n",
+    "            return kings_end_game_squared_table[row][column]\n",
     "    \n",
-    "    piece_squared_table = piece_squared_tables.get(piece.piece_type)\n",
+    "    if color == chess.WHITE:\n",
+    "        piece_squared_table = piece_squared_tables.get(piece.piece_type)\n",
+    "    else:\n",
+    "        piece_squared_table = reversed_piece_squared_tables.get(piece.piece_type)\n",
+    "        \n",
     "    return factor * piece_squared_table[row][column]"
    ]
   },
@@ -305,12 +334,12 @@
    },
    "outputs": [],
    "source": [
-    "def simple_eval_heuristic(board: chess.Board, end_game: bool=False) -> int:\n",
+    "def simple_eval_heuristic(board: chess.Board, color: int, end_game: bool=False) -> int:\n",
     "    piece_value = 0\n",
     "    for square in range(64):\n",
     "        piece = board.piece_at(square)\n",
     "        piece_value += get_piece_value(piece)\n",
-    "        piece_value += get_piece_squared_tables_value(piece, end_game)\n",
+    "        piece_value += get_piece_squared_tables_value(piece, color, end_game)\n",
     "    return piece_value"
    ]
   },
@@ -353,9 +382,9 @@
     "            print(f\"Completed search with depth {current_depth}. Best move so far: {global_best_move}\")\n",
     "        current_depth = depth + d\n",
     "        if color == 1:\n",
-    "            minimize(board, current_depth, -sys.maxsize, sys.maxsize)\n",
+    "            minimize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
     "        else:\n",
-    "            maximize(board, current_depth, -sys.maxsize, sys.maxsize)\n",
+    "            maximize(board, current_depth, -sys.maxsize, sys.maxsize, color)\n",
     "        d += 1\n",
     "        if is_timeout:\n",
     "            return global_best_move"
@@ -383,7 +412,7 @@
    },
    "outputs": [],
    "source": [
-    "def maximize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
+    "def maximize(board: chess.Board, depth: int, alpha: int, beta: int, color: int) -> int:\n",
     "    global is_timeout\n",
     "    global start_time\n",
     "    global best_move\n",
@@ -394,7 +423,7 @@
     "        return alpha\n",
     "\n",
     "    if depth < 1:\n",
-    "        return simple_eval_heuristic(board)\n",
+    "        return simple_eval_heuristic(board, color)\n",
     "    \n",
     "    score = alpha\n",
     "    moves = sorted(board.legal_moves, key=lambda move: -move_scores.get(move, 0))\n",
@@ -402,7 +431,7 @@
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        move_score = minimize(newboard, depth - 1, alpha, beta)\n",
+    "        move_score = minimize(newboard, depth - 1, alpha, beta, color)\n",
     "        move_scores[move] = move_score\n",
     "        newboard.pop()\n",
     "\n",
@@ -440,7 +469,7 @@
    },
    "outputs": [],
    "source": [
-    "def minimize(board: chess.Board, depth: int, alpha: int, beta: int) -> int:\n",
+    "def minimize(board: chess.Board, depth: int, alpha: int, beta: int, color: int) -> int:\n",
     "    global best_move\n",
     "    global global_best_move\n",
     "    \n",
@@ -449,7 +478,7 @@
     "        return beta\n",
     "    \n",
     "    if depth < 1:\n",
-    "        return simple_eval_heuristic(board)\n",
+    "        return simple_eval_heuristic(board, color)\n",
     "    \n",
     "    score = beta\n",
     "    moves = sorted(board.legal_moves, key=lambda move: move_scores.get(move, 0))\n",
@@ -457,7 +486,7 @@
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
-    "        move_score = maximize(newboard, depth - 1, alpha, beta)\n",
+    "        move_score = maximize(newboard, depth - 1, alpha, beta, color)\n",
     "        move_scores[move] = move_score\n",
     "        newboard.pop()\n",
     "\n",
