fix(implementation): initialize ai players turns with correct colors

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -720,9 +720,9 @@
     "        while not board.is_game_over(claim_draw=True):\n",
     "            if board.turn == chess.WHITE:\n",
     "                #move = board.parse_uci(human_player(board))\n",
-    "                move = ai_player(board,0)\n",
+    "                move = ai_player(board, chess.WHITE)\n",
     "            else:\n",
-    "                move = ai_player(board,1)\n",
+    "                move = ai_player(board, chess.BLACK)\n",
     "                \n",
     "            name = who(board.turn)\n",
     "            board.push(move)\n",
