fix(implementation): remove factor in piece-squared tables and use correct color in piece values

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -295,25 +295,24 @@
    },
    "outputs": [],
    "source": [
-    "def get_piece_squared_tables_value(piece: chess.Piece, color: int, end_game: bool=False) -> int:\n",
+    "def get_piece_squared_tables_value(piece: chess.Piece, end_game: bool=False) -> int:\n",
     "    if not piece:\n",
     "        return 0\n",
-    "    factor = -1 if piece.color == chess.BLACK else 1\n",
     "    row = piece.piece_type // 8\n",
     "    column = piece.piece_type % 8\n",
     "    \n",
     "    if end_game and piece.piece_type == chess.KING:\n",
-    "        if color == chess.WHITE:\n",
+    "        if piece.color == chess.WHITE:\n",
     "            return kings_end_game_squared_table[row][column]\n",
     "        else:\n",
-    "            return kings_end_game_squared_table[row][column]\n",
+    "            return reversed_kings_end_game_squared_table[row][column]\n",
     "    \n",
-    "    if color == chess.WHITE:\n",
+    "    if piece.color == chess.WHITE:\n",
     "        piece_squared_table = piece_squared_tables.get(piece.piece_type)\n",
     "    else:\n",
     "        piece_squared_table = reversed_piece_squared_tables.get(piece.piece_type)\n",
     "        \n",
-    "    return factor * piece_squared_table[row][column]"
+    "    return piece_squared_table[row][column]"
    ]
   },
   {
@@ -334,12 +333,12 @@
    },
    "outputs": [],
    "source": [
-    "def simple_eval_heuristic(board: chess.Board, color: int, end_game: bool=False) -> int:\n",
+    "def simple_eval_heuristic(board: chess.Board, end_game: bool=False) -> int:\n",
     "    piece_value = 0\n",
     "    for square in range(64):\n",
     "        piece = board.piece_at(square)\n",
     "        piece_value += get_piece_value(piece)\n",
-    "        piece_value += get_piece_squared_tables_value(piece, color, end_game)\n",
+    "        piece_value += get_piece_squared_tables_value(piece, end_game)\n",
     "    return piece_value"
    ]
   },
@@ -423,7 +422,7 @@
     "        return alpha\n",
     "\n",
     "    if depth < 1:\n",
-    "        return simple_eval_heuristic(board, color)\n",
+    "        return simple_eval_heuristic(board)\n",
     "    \n",
     "    score = alpha\n",
     "    moves = sorted(board.legal_moves, key=lambda move: -move_scores.get(move, 0))\n",
@@ -478,7 +477,7 @@
     "        return beta\n",
     "    \n",
     "    if depth < 1:\n",
-    "        return simple_eval_heuristic(board, color)\n",
+    "        return simple_eval_heuristic(board)\n",
     "    \n",
     "    score = beta\n",
     "    moves = sorted(board.legal_moves, key=lambda move: move_scores.get(move, 0))\n",
