feat(implementation): do check if there is a piece on the square in the heuristic function

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -133,8 +133,6 @@
    "outputs": [],
    "source": [
     "def get_piece_value(piece: chess.Piece) -> int:\n",
-    "    if not piece:\n",
-    "        return 0\n",
     "    factor = -1 if piece.color == chess.BLACK else 1\n",
     "    return factor * piece_values.get(piece.piece_type)"
    ]
@@ -296,8 +294,6 @@
    "outputs": [],
    "source": [
     "def get_piece_squared_tables_value(piece: chess.Piece, end_game: bool=False) -> int:\n",
-    "    if not piece:\n",
-    "        return 0\n",
     "    row = piece.piece_type // 8\n",
     "    column = piece.piece_type % 8\n",
     "    \n",
@@ -337,6 +333,8 @@
     "    piece_value = 0\n",
     "    for square in range(64):\n",
     "        piece = board.piece_at(square)\n",
+    "        if not piece:\n",
+    "            continue\n",
     "        piece_value += get_piece_value(piece)\n",
     "        piece_value += get_piece_squared_tables_value(piece, end_game)\n",
     "    return piece_value"
