fix(implementation): cause of different indexing the piece-squared table rows need to be reversed

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -257,6 +257,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Aufgrund der unterschiedlichen Indizierung müssen die Reihen der Piece-Squared Tables umgekehrt werden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "piece_squared_tables = {key: tuple(reversed(list(value))) \n",
+    "                        for key, value in piece_squared_tables.items()}\n",
+    "kings_end_game_squared_table = tuple(reversed(list(kings_end_game_squared_table)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Generierung der inversen Piece-Squared Tables"
    ]
   },
